src/languages/riv32asm/parser/antlr/SimpleASMParser.ts
// Generated from c:\code\dkriscv\src\languages\riv32asm\parser\SimpleASM.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SimpleASMListener } from "./SimpleASMListener";
import { SimpleASMVisitor } from "./SimpleASMVisitor";


export class SimpleASMParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly T__58 = 59;
	public static readonly T__59 = 60;
	public static readonly T__60 = 61;
	public static readonly T__61 = 62;
	public static readonly T__62 = 63;
	public static readonly T__63 = 64;
	public static readonly T__64 = 65;
	public static readonly T__65 = 66;
	public static readonly T__66 = 67;
	public static readonly T__67 = 68;
	public static readonly T__68 = 69;
	public static readonly T__69 = 70;
	public static readonly T__70 = 71;
	public static readonly T__71 = 72;
	public static readonly T__72 = 73;
	public static readonly T__73 = 74;
	public static readonly T__74 = 75;
	public static readonly T__75 = 76;
	public static readonly T__76 = 77;
	public static readonly T__77 = 78;
	public static readonly T__78 = 79;
	public static readonly T__79 = 80;
	public static readonly T__80 = 81;
	public static readonly REG = 82;
	public static readonly INT = 83;
	public static readonly HEX = 84;
	public static readonly BIN = 85;
	public static readonly ID = 86;
	public static readonly String = 87;
	public static readonly Comment = 88;
	public static readonly Space = 89;
	public static readonly RULE_program = 0;
	public static readonly RULE_lines = 1;
	public static readonly RULE_line = 2;
	public static readonly RULE_directive = 3;
	public static readonly RULE_section = 4;
	public static readonly RULE_global = 5;
	public static readonly RULE_align = 6;
	public static readonly RULE_data = 7;
	public static readonly RULE_label = 8;
	public static readonly RULE_instruction = 9;
	public static readonly RULE_pseudo = 10;
	public static readonly RULE_environment = 11;
	public static readonly RULE_rtype = 12;
	public static readonly RULE_itype = 13;
	public static readonly RULE_stype = 14;
	public static readonly RULE_btype = 15;
	public static readonly RULE_jtype = 16;
	public static readonly RULE_utype = 17;
	public static readonly RULE_offset = 18;
	public static readonly RULE_register = 19;
	public static readonly RULE_immediate = 20;
	public static readonly RULE_numlist = 21;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "lines", "line", "directive", "section", "global", "align", 
		"data", "label", "instruction", "pseudo", "environment", "rtype", "itype", 
		"stype", "btype", "jtype", "utype", "offset", "register", "immediate", 
		"numlist",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'section'", "'.text'", "'.data'", "'.rodata'", "'.bss'", "'.global'", 
		"'.globl'", "'.align'", "':'", "'.string'", "'.ascii'", "'.asciiz'", "'.byte'", 
		"'.word'", "'la'", "','", "'li'", "'mv'", "'seqz'", "'sltz'", "'sgtz'", 
		"'beqz'", "'bnez'", "'blez'", "'bgez'", "'bltz'", "'bgtz'", "'bgt'", "'ble'", 
		"'bgtu'", "'bleu'", "'not'", "'neg'", "'j'", "'jal'", "'jr'", "'jalr'", 
		"'ret'", "'call'", "'ecall'", "'add'", "'sub'", "'xor'", "'or'", "'and'", 
		"'sll'", "'srl'", "'sra'", "'slt'", "'su'", "'addi'", "'xori'", "'andi'", 
		"'ori'", "'slli'", "'srli'", "'srai'", "'slti'", "'sltiu'", "'lb'", "'lh'", 
		"'lw'", "'('", "')'", "'sb'", "'sh'", "'sw'", "'beq'", "'bne'", "'blt'", 
		"'bge'", "'bltu'", "'bgeu'", "'lui'", "'auipc'", "'zero'", "'ra'", "'sp'", 
		"'gp'", "'tp'", "'fp'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "REG", "INT", "HEX", 
		"BIN", "ID", "String", "Comment", "Space",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SimpleASMParser._LITERAL_NAMES, SimpleASMParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SimpleASMParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SimpleASM.g4"; }

	// @Override
	public get ruleNames(): string[] { return SimpleASMParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SimpleASMParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SimpleASMParser._ATN, this);
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SimpleASMParser.RULE_program);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 44;
			this.lines();
			this.state = 45;
			this.match(SimpleASMParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public lines(): LinesContext {
		let _localctx: LinesContext = new LinesContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SimpleASMParser.RULE_lines);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 50;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__0) | (1 << SimpleASMParser.T__1) | (1 << SimpleASMParser.T__2) | (1 << SimpleASMParser.T__3) | (1 << SimpleASMParser.T__4) | (1 << SimpleASMParser.T__5) | (1 << SimpleASMParser.T__6) | (1 << SimpleASMParser.T__7) | (1 << SimpleASMParser.T__14) | (1 << SimpleASMParser.T__16) | (1 << SimpleASMParser.T__17) | (1 << SimpleASMParser.T__18) | (1 << SimpleASMParser.T__19) | (1 << SimpleASMParser.T__20) | (1 << SimpleASMParser.T__21) | (1 << SimpleASMParser.T__22) | (1 << SimpleASMParser.T__23) | (1 << SimpleASMParser.T__24) | (1 << SimpleASMParser.T__25) | (1 << SimpleASMParser.T__26) | (1 << SimpleASMParser.T__27) | (1 << SimpleASMParser.T__28) | (1 << SimpleASMParser.T__29) | (1 << SimpleASMParser.T__30))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (SimpleASMParser.T__31 - 32)) | (1 << (SimpleASMParser.T__32 - 32)) | (1 << (SimpleASMParser.T__33 - 32)) | (1 << (SimpleASMParser.T__34 - 32)) | (1 << (SimpleASMParser.T__35 - 32)) | (1 << (SimpleASMParser.T__36 - 32)) | (1 << (SimpleASMParser.T__37 - 32)) | (1 << (SimpleASMParser.T__38 - 32)) | (1 << (SimpleASMParser.T__39 - 32)) | (1 << (SimpleASMParser.T__40 - 32)) | (1 << (SimpleASMParser.T__41 - 32)) | (1 << (SimpleASMParser.T__42 - 32)) | (1 << (SimpleASMParser.T__43 - 32)) | (1 << (SimpleASMParser.T__44 - 32)) | (1 << (SimpleASMParser.T__45 - 32)) | (1 << (SimpleASMParser.T__46 - 32)) | (1 << (SimpleASMParser.T__47 - 32)) | (1 << (SimpleASMParser.T__48 - 32)) | (1 << (SimpleASMParser.T__49 - 32)) | (1 << (SimpleASMParser.T__50 - 32)) | (1 << (SimpleASMParser.T__51 - 32)) | (1 << (SimpleASMParser.T__52 - 32)) | (1 << (SimpleASMParser.T__53 - 32)) | (1 << (SimpleASMParser.T__54 - 32)) | (1 << (SimpleASMParser.T__55 - 32)) | (1 << (SimpleASMParser.T__56 - 32)) | (1 << (SimpleASMParser.T__57 - 32)) | (1 << (SimpleASMParser.T__58 - 32)) | (1 << (SimpleASMParser.T__59 - 32)) | (1 << (SimpleASMParser.T__60 - 32)) | (1 << (SimpleASMParser.T__61 - 32)))) !== 0) || ((((_la - 65)) & ~0x1F) === 0 && ((1 << (_la - 65)) & ((1 << (SimpleASMParser.T__64 - 65)) | (1 << (SimpleASMParser.T__65 - 65)) | (1 << (SimpleASMParser.T__66 - 65)) | (1 << (SimpleASMParser.T__67 - 65)) | (1 << (SimpleASMParser.T__68 - 65)) | (1 << (SimpleASMParser.T__69 - 65)) | (1 << (SimpleASMParser.T__70 - 65)) | (1 << (SimpleASMParser.T__71 - 65)) | (1 << (SimpleASMParser.T__72 - 65)) | (1 << (SimpleASMParser.T__73 - 65)) | (1 << (SimpleASMParser.T__74 - 65)) | (1 << (SimpleASMParser.ID - 65)))) !== 0)) {
				{
				{
				this.state = 47;
				this.line();
				}
				}
				this.state = 52;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let _localctx: LineContext = new LineContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SimpleASMParser.RULE_line);
		try {
			this.state = 57;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 53;
				this.data();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 54;
				this.directive();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 55;
				this.instruction();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 56;
				this.label();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public directive(): DirectiveContext {
		let _localctx: DirectiveContext = new DirectiveContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SimpleASMParser.RULE_directive);
		try {
			this.state = 62;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SimpleASMParser.T__0:
			case SimpleASMParser.T__1:
			case SimpleASMParser.T__2:
			case SimpleASMParser.T__3:
			case SimpleASMParser.T__4:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 59;
				this.section();
				}
				break;
			case SimpleASMParser.T__5:
			case SimpleASMParser.T__6:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 60;
				this.global();
				}
				break;
			case SimpleASMParser.T__7:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 61;
				this.align();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public section(): SectionContext {
		let _localctx: SectionContext = new SectionContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SimpleASMParser.RULE_section);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SimpleASMParser.T__0) {
				{
				this.state = 64;
				this.match(SimpleASMParser.T__0);
				}
			}

			this.state = 67;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__1) | (1 << SimpleASMParser.T__2) | (1 << SimpleASMParser.T__3) | (1 << SimpleASMParser.T__4))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public global(): GlobalContext {
		let _localctx: GlobalContext = new GlobalContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SimpleASMParser.RULE_global);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 69;
			_la = this._input.LA(1);
			if (!(_la === SimpleASMParser.T__5 || _la === SimpleASMParser.T__6)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 70;
			this.match(SimpleASMParser.ID);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public align(): AlignContext {
		let _localctx: AlignContext = new AlignContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SimpleASMParser.RULE_align);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 72;
			this.match(SimpleASMParser.T__7);
			this.state = 73;
			this.immediate();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public data(): DataContext {
		let _localctx: DataContext = new DataContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SimpleASMParser.RULE_data);
		let _la: number;
		try {
			this.state = 87;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 75;
				_localctx._name = this.match(SimpleASMParser.ID);
				this.state = 76;
				this.match(SimpleASMParser.T__8);
				this.state = 77;
				_localctx._type = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__9) | (1 << SimpleASMParser.T__10) | (1 << SimpleASMParser.T__11))) !== 0))) {
					_localctx._type = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 78;
				this.match(SimpleASMParser.String);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 79;
				_localctx._name = this.match(SimpleASMParser.ID);
				this.state = 80;
				this.match(SimpleASMParser.T__8);
				this.state = 81;
				_localctx._type = this.match(SimpleASMParser.T__12);
				this.state = 82;
				this.numlist();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 83;
				_localctx._name = this.match(SimpleASMParser.ID);
				this.state = 84;
				this.match(SimpleASMParser.T__8);
				this.state = 85;
				_localctx._type = this.match(SimpleASMParser.T__13);
				this.state = 86;
				this.numlist();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, SimpleASMParser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 89;
			this.match(SimpleASMParser.ID);
			this.state = 90;
			this.match(SimpleASMParser.T__8);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public instruction(): InstructionContext {
		let _localctx: InstructionContext = new InstructionContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, SimpleASMParser.RULE_instruction);
		try {
			this.state = 100;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 92;
				this.pseudo();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 93;
				this.environment();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 94;
				this.rtype();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 95;
				this.itype();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 96;
				this.stype();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 97;
				this.utype();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 98;
				this.jtype();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 99;
				this.btype();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public pseudo(): PseudoContext {
		let _localctx: PseudoContext = new PseudoContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, SimpleASMParser.RULE_pseudo);
		let _la: number;
		try {
			this.state = 150;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case SimpleASMParser.T__14:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 102;
				_localctx._op = this.match(SimpleASMParser.T__14);
				this.state = 103;
				_localctx._rd = this.register();
				this.state = 104;
				this.match(SimpleASMParser.T__15);
				this.state = 105;
				_localctx._symbol = this.match(SimpleASMParser.ID);
				}
				break;
			case SimpleASMParser.T__16:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 107;
				_localctx._op = this.match(SimpleASMParser.T__16);
				this.state = 108;
				_localctx._rd = this.register();
				this.state = 109;
				this.match(SimpleASMParser.T__15);
				this.state = 110;
				this.immediate();
				}
				break;
			case SimpleASMParser.T__17:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 112;
				_localctx._op = this.match(SimpleASMParser.T__17);
				this.state = 113;
				_localctx._rd = this.register();
				this.state = 114;
				this.match(SimpleASMParser.T__15);
				this.state = 115;
				_localctx._rs1 = this.register();
				}
				break;
			case SimpleASMParser.T__18:
			case SimpleASMParser.T__19:
			case SimpleASMParser.T__20:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 117;
				_localctx._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__18) | (1 << SimpleASMParser.T__19) | (1 << SimpleASMParser.T__20))) !== 0))) {
					_localctx._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 118;
				_localctx._rd = this.register();
				this.state = 119;
				this.match(SimpleASMParser.T__15);
				this.state = 120;
				_localctx._rs1 = this.register();
				}
				break;
			case SimpleASMParser.T__21:
			case SimpleASMParser.T__22:
			case SimpleASMParser.T__23:
			case SimpleASMParser.T__24:
			case SimpleASMParser.T__25:
			case SimpleASMParser.T__26:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 122;
				_localctx._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__21) | (1 << SimpleASMParser.T__22) | (1 << SimpleASMParser.T__23) | (1 << SimpleASMParser.T__24) | (1 << SimpleASMParser.T__25) | (1 << SimpleASMParser.T__26))) !== 0))) {
					_localctx._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 123;
				_localctx._rs1 = this.register();
				this.state = 124;
				this.match(SimpleASMParser.T__15);
				this.state = 125;
				this.offset();
				}
				break;
			case SimpleASMParser.T__27:
			case SimpleASMParser.T__28:
			case SimpleASMParser.T__29:
			case SimpleASMParser.T__30:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 127;
				_localctx._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimpleASMParser.T__27) | (1 << SimpleASMParser.T__28) | (1 << SimpleASMParser.T__29) | (1 << SimpleASMParser.T__30))) !== 0))) {
					_localctx._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 128;
				_localctx._rs1 = this.register();
				this.state = 129;
				this.match(SimpleASMParser.T__15);
				this.state = 130;
				_localctx._rs2 = this.register();
				this.state = 131;
				this.match(SimpleASMParser.T__15);
				this.state = 132;
				this.offset();
				}
				break;
			case SimpleASMParser.T__31:
			case SimpleASMParser.T__32:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 134;
				_localctx._op = this._input.LT(1);
				_la = this._input.LA(1);
				if (!(_la === SimpleASMParser.T__31 || _la === SimpleASMParser.T__32)) {
					_localctx._op = this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}
